Bug fix in source code viewer. Do not hide overflow-y unless the source code viewer is expanded to show full source. Extend the height by 30 additional pixels to eliminate a vertical scrollbar when showing full source.

--- a/wporg-docs.css
+++ b/wporg-docs.css
@@ -1473,6 +1473,8 @@ main .related .used-by {
 
 .single-wp-parser main .source-code-container {
 	overflow-x: auto;
+}
+.single-wp-parser main .source-code-container.expanded{
 	overflow-y: hidden;
 }
 
